@@ -29,7 +29,8 @@ SCANGOBJ_OPTIONS=
 
 # Extra options to supply to gtkdoc-scan.
 # e.g. SCAN_OPTIONS=--deprecated-guards="GTK_DISABLE_DEPRECATED"
-SCAN_OPTIONS=--deprecated-guards=ASN1_DISABLE_DEPRECATED
+SCAN_OPTIONS=--ignore-decorators=ASN1_API \
+	--deprecated-guards=ASN1_DISABLE_DEPRECATED
 
 # Extra options to supply to gtkdoc-mkdb.
 # e.g. MKDB_OPTIONS=--sgml-mode --output-format=xml
